# SoX-Plugins

./: .gitattributes  LICENSE.txt  README.md
_DISTRIBUTION/Windows-AMD64/: SoXCompander.vst3  SoXFilter.vst3  SoXGain.vst3  SoXOverdrive.vst3  SoXPhaserAndTremolo.vst3  SoXReverb.vst3
_DISTRIBUTION/test/: makeTestFiles.bat  makeTestFiles.sh  testSoxPlugins-C++.rpp
buildSetup/: CMakeLists.txt  CPPCompilerConfiguration.cmake  GlobalSettings.cmake  LocalConfiguration.cmake  PluginCPPCompilerSettings.cmake
buildSetup/MacOSX/: Info.plist.in
buildSetup/Windows/: datastructures.natvis
doc/doxygen/: SoXPlugins-doxygen-FULL.cfg.in  mainPage.md
doc/latex/: SoXPlugins-documentation.ltx
internalDocumentation/html/: _8_0g_string_util_8h_source.html  _assertion_8h.html  _assertion_8h.js  _assertion_8h__dep__incl.map  _assertion_8h__dep__incl.md5  _assertion_8h__incl.map  _assertion_8h__incl.md5  _assertion_8h_source.html  _audio_sample_8h.html  _audio_sample_8h.js  _audio_sample_8h__dep__incl.map  _audio_sample_8h__dep__incl.md5  _audio_sample_8h__incl.map  _audio_sample_8h__incl.md5  _audio_sample_8h_source.html  _audio_sample_list_8cpp-inc.html  _audio_sample_list_8cpp-inc__dep__incl.map  _audio_sample_list_8cpp-inc__dep__incl.md5  _audio_sample_list_8cpp-inc__incl.map  _audio_sample_list_8cpp-inc__incl.md5  _audio_sample_list_8cpp.html  _audio_sample_list_8cpp__incl.map  _audio_sample_list_8cpp__incl.md5  _audio_sample_list_8h.html  _audio_sample_list_8h.js  _audio_sample_list_8h__dep__incl.map  _audio_sample_list_8h__dep__incl.md5  _audio_sample_list_8h__incl.map  _audio_sample_list_8h__incl.md5  _audio_sample_list_8h_source.html  _audio_sample_list_vector_8cpp-inc.html  _audio_sample_list_vector_8cpp-inc__dep__incl.map  _audio_sample_list_vector_8cpp-inc__dep__incl.md5  _audio_sample_list_vector_8cpp-inc__incl.map  _audio_sample_list_vector_8cpp-inc__incl.md5  _audio_sample_list_vector_8cpp.html  _audio_sample_list_vector_8cpp__incl.map  _audio_sample_list_vector_8cpp__incl.md5  _audio_sample_list_vector_8h.html  _audio_sample_list_vector_8h__dep__incl.map  (+1617 more)
internalDocumentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+106 more)
src/: _NAMESPACE.desc
src/Audio/: AudioSample.h  AudioSampleList.cpp  AudioSampleList.cpp-inc  AudioSampleList.h  AudioSampleListVector.cpp  AudioSampleListVector.cpp-inc  AudioSampleListVector.h  AudioSampleRingBuffer.cpp  AudioSampleRingBuffer.cpp-inc  AudioSampleRingBuffer.h  AudioSampleRingBufferVector.cpp  AudioSampleRingBufferVector.cpp-inc  AudioSampleRingBufferVector.h  FilterBandwidthUnit.h  IIRFilter.cpp  IIRFilter.cpp-inc  IIRFilter.h  WaveForm.cpp  WaveForm.cpp-inc  WaveForm.h  _NAMESPACE.desc
src/BaseModules/: Assertion.h  File.cpp  File.h  Logging.h  LoggingSupport.cpp  LoggingSupport.h  MyWindows.h  OperatingSystem.cpp  OperatingSystem.h  StringUtil.cpp  StringUtil.h  _NAMESPACE.desc
src/BaseTypes/: Assertion.h  GlobalMacros.h  Logging.h  LoggingSupport.cpp  LoggingSupport.h  StringUtil.cpp  StringUtil.h  _NAMESPACE.desc
src/BaseTypes/Containers/: ByteList.cpp  ByteList.h  Dictionary.cpp  Dictionary.h  GenericMatrix.h  GenericSequence.h  GenericTuple.h  IntegerList.cpp  IntegerList.h  MyArray.h  NaturalList.cpp  NaturalList.h  RealList.cpp  RealList.h  StringList.cpp  StringList.h  StringSet.cpp  StringSet.h  _NAMESPACE.desc
src/BaseTypes/GenericTypes/: ElementToStringProc.h  GenericEnumeration.h  GenericList.h  GenericMap.h  GenericMatrix.h  GenericNumber.h  GenericSet.h  GenericTuple.h  StringLiteral.h  StringProc.h  _NAMESPACE.desc
src/BaseTypes/Primitives/: Boolean.h  Byte.h  Character.h  GenericEnumeration.h  GenericNumber.h  Integer.h  MyString.cpp  MyString.h  Natural.h  Object.h  Percentage.h  Radians.h  Real.cpp  Real.h  _NAMESPACE.desc
src/CommonAudio/: SoXAudioEffect.cpp  SoXAudioEffect.h  SoXAudioHelper.h  SoXAudioParameterMap.cpp  SoXAudioParameterMap.h  SoXAudioSample.h  SoXAudioSampleBuffer.cpp  SoXAudioSampleBuffer.h  SoXAudioSampleList.cpp  SoXAudioSampleList.cpp-inc  SoXAudioSampleList.h  SoXAudioSampleListVector.cpp  SoXAudioSampleListVector.cpp-inc  SoXAudioSampleListVector.h  SoXAudioSampleMatrix.cpp  SoXAudioSampleMatrix.h  SoXAudioSampleQueue.cpp  SoXAudioSampleQueue.cpp-inc  SoXAudioSampleQueue.h  SoXAudioSampleQueueMatrix.cpp  SoXAudioSampleQueueMatrix.cpp-inc  SoXAudioSampleQueueMatrix.h  SoXAudioValueChangeKind.h  SoXFilterBandwidthUnit.h  SoXIIRFilter-NEW.cpp  SoXIIRFilter.cpp  SoXIIRFilter.cpp-inc  SoXIIRFilter.h  SoXWaveForm.cpp  SoXWaveForm.h  _NAMESPACE.desc
src/Effects/: SoXAudioEffect.cpp  SoXAudioEffect.h  _NAMESPACE.desc
src/Effects/SoX-Test/: SoX-TEST_main-std.cpp
src/Effects/SoXChorusAndEcho/: JucePluginDefines.h  SoXChorusAndEcho_AudioEffect.cpp  SoXChorusAndEcho_AudioEffect.h  SoXChorusAndEcho_AudioProcessor.cpp  SoXPlugin-AU_1.mm  SoXPlugin-VST_1.cpp  _NAMESPACE.desc  resources.rc
src/Effects/SoXCompander/: JucePluginDefines.h  SoXCompanderSupport.cpp  SoXCompanderSupport.h  SoXCompander_AudioEffect.cpp  SoXCompander_AudioEffect.h  (+7 more)
src/Helpers/: SoXAudioHelper.h  SoXAudioParameterMap.cpp  SoXAudioParameterMap.h  SoXAudioValueChangeKind.h  SoXEffectParameterMap.cpp  SoXEffectParameterMap.h  SoXParameterValueChangeKind.h  _NAMESPACE.desc
src/JuceLibraryFacade/: AppConfig.h  JuceHeader.h  JuceHeaders.h  include_juce_audio_utils.mm
src/ViewAndController/: JuceLibrary.h  SoXAudioEditor.cpp  SoXAudioEditor.h  SoXAudioEditorWidget.cpp  SoXAudioEditorWidget.h  SoXAudioProcessor.cpp  SoXAudioProcessor.h  _NAMESPACE.desc
test/: makeTestFiles.bat  makeTestFiles.sh  testSoXPlugins-AU.rpp  testSoXPlugins-VST3-reduced.RPP  testSoXPlugins-VST3.rpp  testSoxPlugins-C++.rpp
(+107 files in other folders)
